--- a/build.gradle
+++ b/build.gradle
@@ -16,16 +16,19 @@ allprojects {
 }
 
 ext {
-	(mod_buildnumber_file, mod_version, mod_buildnumber, mod_artifacts_dir) = ({
+	(mod_buildnumber_file, mod_version, mod_version_full, mod_pre, mod_version_micro, mod_artifacts_dir) = ({
 		assert project.isProperty('version_major'): 'missing property: version_major'
 		assert project.isProperty('version_minor'): 'missing property: version_minor'
 		assert project.isProperty('version_patch'): 'missing property: version_patch'
-		def buildnumberfile = file 'buildnum.properties'
+		def buildnumberfile = file '.buildnumber/buildnum.properties'
 		def modversion = "${project.version_major}.${project.version_minor}.${project.version_patch}"
 		def buildnumbermicro = 0
-		if (project.isProperty('version_qualifier')) {
-			def buildnumber = System.getenv 'TRAVIS_BUILD_NUMBER'
 
+		def buildnumber = System.getenv 'TRAVIS_BUILD_NUMBER'
+		def buildtext = buildnumber ? '+'+String.format('%03d', buildnumber) : ''
+
+		def pre = project.isProperty('version_qualifier')
+		if (pre) {
 			def props = new Properties()
 			if (buildnumberfile.exists())
 				buildnumberfile.withInputStream { stream ->
@@ -39,12 +42,12 @@ ext {
 					props.version_qualifier == project.version_qualifier)
 				buildnumbermicro = props.buildnumber as Integer
 
-			def buildtext = buildnumber ? '.'+buildnumber : ''
-			def buildtextmicro = buildnumbermicro>0 ? '+'+String.format('%03d', buildnumbermicro) : ''
-			modversion = "${modversion}-${project.version_qualifier}${buildtext}${buildtextmicro}"
+			def buildtextmicro = buildnumbermicro>0 ? '.'+buildnumbermicro : ''
+			modversion = "${modversion}-${project.version_qualifier}${buildtextmicro}"
 		}
+		def modversionfull = "${modversion}${buildtext}"
 		def modartifactsdir = file "artifacts/${modversion}"
-		[buildnumberfile, modversion, buildnumbermicro, modartifactsdir]
+		[buildnumberfile, modversion, modversionfull, pre, buildnumbermicro, modartifactsdir]
 	})()
 	mod_changelog = ({
 		def textChangelog = project.isProperty('extra_changelog') ? project.extra_changelog : ''
@@ -54,7 +57,6 @@ ext {
 		}
 		textChangelog
 	})()
-	mod_pre = project.isProperty('version_qualifier')
 
 	sec_curseforge_key = System.getenv('CURSEFORGE_TOKEN') ?: project.isProperty('api_key_curseforge') ? project.api_key_curseforge : null
 	sec_github_key = System.getenv('GITHUB_TOKEN') ?: project.isProperty('api_key_github') ? project.api_key_github : null
@@ -72,7 +74,8 @@ task increment {
 		props.version_minor = project.version_minor
 		props.version_patch = project.version_patch
 		props.version_qualifier = project.version_qualifier
-		props.buildnumber = mod_buildnumber+1 as String
+		props.buildnumber = mod_version_micro+1 as String
+		mod_buildnumber_file.parentFile.mkdirs()
 		mod_buildnumber_file.withOutputStream { stream ->
 			props.store stream, 'Build Number Property'
 		}
@@ -171,16 +174,16 @@ github {
 		}
 	}
 
-	def ver = "${mod_version}"
+	def verfull = "${mod_version_full}"
 	tasks.githubRelease.dependsOn 'build'
 	prerelease = mod_pre
 	owner = project.extra_github_owner
 	repo = project.extra_github_repo
 	token = sec_github_key
-	tagName = ver
+	tagName = verfull
 	targetCommitish = plugins.findPlugin('com.palantir.git-version').gitRepo(rootProject).repository.getRef('HEAD').objectId.name()
-	def title = (project.isProperty('extra_github_title')) ? project.release_title : ver
-	name = title.replace('{version}', ver)
+	def title = (project.isProperty('extra_github_title')) ? project.release_title : '{version}'
+	name = title.replace('{version}', verfull)
 	body = mod_changelog
 	draft = false
 	def allassets = [jar]
