--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ ext {
 		def modversion = "${project.version_major}.${project.version_minor}.${project.version_patch}"
 		def buildnumbermicro = 0
 
-		def buildnumber = System.getenv 'TRAVIS_BUILD_NUMBER'
+		def buildnumber = System.getenv('TRAVIS_BUILD_NUMBER') as Integer
 		def buildtext = buildnumber ? '+'+String.format('%03d', buildnumber) : ''
 
 		def pre = project.isProperty('version_qualifier')
