--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ allprojects {
 }
 
 ext {
-	(mod_buildnumber_file, mod_version, mod_version_full, mod_pre, mod_version_micro, mod_artifacts_dir) = ({
+	(mod_version, mod_version_full, mod_pre, mod_artifacts_dir) = ({
 		assert project.isProperty('version_major'): 'missing property: version_major'
 		assert project.isProperty('version_minor'): 'missing property: version_minor'
 		assert project.isProperty('version_patch'): 'missing property: version_patch'
@@ -25,30 +25,57 @@ ext {
 		def buildnumbermicro = 0
 
 		def buildnumber = System.getenv('TRAVIS_BUILD_NUMBER') as Integer
-		def buildtext = buildnumber ? '+'+String.format('%03d', buildnumber) : ''
 
+		def buildtext = ''
 		def pre = project.isProperty('version_qualifier')
-		if (pre) {
-			def props = new Properties()
-			if (buildnumberfile.exists())
-				buildnumberfile.withInputStream { stream ->
-					props.load stream
+		if (pre)
+			modversion = "${modversion}-${project.version_qualifier}"
+		if (!buildnumber) {
+			if (pre) {
+				def props = new Properties()
+				if (buildnumberfile.exists())
+					buildnumberfile.withInputStream { stream ->
+						props.load stream
+					}
+
+				if (props.buildnumber &&
+						props.version_major == project.version_major &&
+						props.version_minor == project.version_minor &&
+						props.version_patch == project.version_patch &&
+						props.version_qualifier == project.version_qualifier)
+					buildnumbermicro = props.buildnumber as Integer
+
+				buildtext = buildnumbermicro>0 ? '.'+buildnumbermicro : ''
+			}
+
+			task increment {
+				doLast {
+					def props = new Properties()
+					props.version_major = project.version_major
+					props.version_minor = project.version_minor
+					props.version_patch = project.version_patch
+					props.version_qualifier = project.version_qualifier
+					props.buildnumber = buildnumbermicro+1 as String
+					buildnumberfile.parentFile.mkdirs()
+					buildnumberfile.withOutputStream { stream ->
+						props.store stream, 'Build Number Property'
+					}
 				}
+			}
 
-			if (props.buildnumber &&
-					props.version_major == project.version_major &&
-					props.version_minor == project.version_minor &&
-					props.version_patch == project.version_patch &&
-					props.version_qualifier == project.version_qualifier)
-				buildnumbermicro = props.buildnumber as Integer
+			subprojects {
+				afterEvaluate {
+					tasks.build.dependsOn increment
+				}
+			}
+		} else
+			buildtext = buildnumber ? '+'+String.format('%03d', buildnumber) : ''
 
-			def buildtextmicro = buildnumbermicro>0 ? '.'+buildnumbermicro : ''
-			modversion = "${modversion}-${project.version_qualifier}${buildtextmicro}"
-		}
 		def modversionfull = "${modversion}${buildtext}"
 		def modartifactsdir = file "artifacts/${modversion}"
-		[buildnumberfile, modversion, modversionfull, pre, buildnumbermicro, modartifactsdir]
+		[modversion, modversionfull, pre, modartifactsdir]
 	})()
+
 	mod_changelog = ({
 		def textChangelog = project.isProperty('extra_changelog') ? project.extra_changelog : ''
 		if (project.isProperty('extra_changelog_location')) {
@@ -65,21 +92,6 @@ ext {
 	sec_keystore_location = System.getenv('KEYSTORE_LOCATION') ?: project.isProperty('keystore_location') ? project.keystore_location : null
 	sec_keystore_alias = System.getenv('KEYSTORE_ALIAS') ?: project.isProperty('keystore_alias') ? project.keystore_alias : null
 	sec_keystore_password = System.getenv('KEYSTORE_PASSWORD') ?: project.isProperty('keystore_password') ? project.keystore_password : null
-}
-
-task increment {
-	doLast {
-		def props = new Properties()
-		props.version_major = project.version_major
-		props.version_minor = project.version_minor
-		props.version_patch = project.version_patch
-		props.version_qualifier = project.version_qualifier
-		props.buildnumber = mod_version_micro+1 as String
-		mod_buildnumber_file.parentFile.mkdirs()
-		mod_buildnumber_file.withOutputStream { stream ->
-			props.store stream, 'Build Number Property'
-		}
-	}
 }
 
 class DeployExtension {
@@ -131,10 +143,6 @@ subprojects {
 	ext.deploy_target = project.extensions.create('deploy', DeployExtension, project, deploy.targets.clone())
 	ext.manifests = project.extensions.create('manifests', ManifestExtension, manifests.manifests.clone())
 	['private.gradle', 'properties.gradle'].each { def its = file(it); if (its.exists()) apply from: its }
-
-	afterEvaluate {
-		tasks.build.dependsOn increment
-	}
 }
 
 evaluationDependsOnChildren()
