--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_install:
 install: "./gradlew setupCIWorkspace"
 script: "./gradlew build"
 after_success:
-  - ./gradlew githubRelease
-#  - ./gradlew bintrayUpload
+  #- ./gradlew githubRelease
+  #- ./gradlew bintrayUpload
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -19,3 +19,18 @@ cache:
     - $HOME/.gradle/wrapper/
 notifications:
   email: false
+before_deploy:
+  # Gitの設定
+  - git config --global user.name "Travis CI"
+  - git config --global user.email "travis@travis-ci.org"
+  - git tag $GIT_TAG -a -m "Commit from Travis CI for build $TRAVIS_BUILD_NUMBER"
+  - git push --quiet https://$GH_TOKEN@github.com/<user name>/<repo name>.git --tags 2> /dev/null
+deploy:
+  provider: releases
+  skip_cleanup: true
+  api_key: $GITHUB_TOKEN
+  file_glob: true
+  file: artifacts/release/*
+  on:
+    all_branches: true
+    tags: true
