--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 language: java
 jdk: oraclejdk8
+branches:
+  except:
+    - /^b[0-9]/
 env:
   - GRADLE_OPTS="-Dorg.gradle.daemon=false"
 before_install:
   - chmod a+x gradlew
   - ./gradlew clean
-install: "./gradlew setupCIWorkspace"
-script: "./gradlew releaseArtifacts"
+install: "./gradlew setupCIWorkspace --continue"
+script: "./gradlew build --continue"
 after_success:
-  #- ./gradlew githubRelease
+  - ./gradlew githubRelease
   #- ./gradlew bintrayUpload
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -19,12 +22,12 @@ cache:
     - $HOME/.gradle/wrapper/
 notifications:
   email: false
-deploy:
-  provider: releases
-  skip_cleanup: true
-  api_key: ${GITHUB_TOKEN}
-  file_glob: true
-  file: artifacts/release/*
-  on:
-    all_branches: true
-    tags: false
+#deploy:
+#  provider: releases
+#  skip_cleanup: true
+#  api_key: ${GITHUB_TOKEN}
+#  file_glob: true
+#  file: artifacts/release/*
+#  on:
+#    all_branches: true
+#    tags: false
