--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 install: "./gradlew setupCIWorkspace --continue"
 script: "./gradlew build --continue"
 after_success:
-  - ./gradlew githubRelease
+  - ./gradlew githubRelease --continue
   #- ./gradlew bintrayUpload
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
